[gd_scene load_steps=17 format=3 uid="uid://cn8n57e28lbfe"]

[ext_resource type="Script" path="res://main.gd" id="1_3161e"]
[ext_resource type="PackedScene" uid="uid://dmd60iv63nc4e" path="res://tower_1.tscn" id="1_xe7jd"]
[ext_resource type="PackedScene" uid="uid://jvqcnnr0bi2h" path="res://morter_tower.tscn" id="4_cgkrr"]
[ext_resource type="PackedScene" uid="uid://d2pv6vbiulgdu" path="res://sniper_tower.tscn" id="5_2yham"]
[ext_resource type="Script" path="res://EnemyPath.gd" id="5_rv4f4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la0bc"]
size = Vector2(54, 252)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbfhf"]
size = Vector2(361, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2vbg"]
size = Vector2(37, 146)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tn8bn"]
size = Vector2(376, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyuvw"]
size = Vector2(65, 296)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjqvh"]
size = Vector2(663, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fipo2"]
size = Vector2(53, 238)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdrql"]
size = Vector2(878, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0a3pp"]
size = Vector2(46, 439)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kamcp"]
size = Vector2(259, 36)

[sub_resource type="Curve2D" id="Curve2D_ak686"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 107, 647, 0, 0, 0, 0, 98, 422, 0, 0, 0, 0, 412, 419, 0, 0, 0, 0, 416, 527, 0, 0, 0, 0, 742, 528, 0, 0, 0, 0, 744, 270, 0, 0, 0, 0, 128, 274, 0, 0, 0, 0, 144, 89, 0, 0, 0, 0, 960, 84, 0, 0, 0, 0, 971, 482, 0, 0, 0, 0, 1276, 474)
}
point_count = 11

[node name="Game" type="Node2D"]
script = ExtResource("1_3161e")
tower_1 = ExtResource("1_xe7jd")
sniper_tower = ExtResource("5_2yham")
morter_tower = ExtResource("4_cgkrr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 651.0
color = Color(0.454902, 0.247059, 0.0862745, 1)

[node name="Path1" type="ColorRect" parent="."]
offset_left = 68.0
offset_top = 396.0
offset_right = 123.0
offset_bottom = 651.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path1" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path1/Area2D"]
position = Vector2(28, 127)
shape = SubResource("RectangleShape2D_la0bc")

[node name="Path2" type="ColorRect" parent="."]
offset_left = 71.0
offset_top = 396.0
offset_right = 432.0
offset_bottom = 442.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path2" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2/Area2D"]
position = Vector2(177.5, 24)
shape = SubResource("RectangleShape2D_mbfhf")

[node name="Path3" type="ColorRect" parent="."]
offset_left = 395.0
offset_top = 396.0
offset_right = 432.0
offset_bottom = 546.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path3" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path3/Area2D"]
position = Vector2(19.5, 74)
shape = SubResource("RectangleShape2D_s2vbg")

[node name="Path4" type="ColorRect" parent="."]
offset_left = 397.0
offset_top = 494.0
offset_right = 770.0
offset_bottom = 546.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path4" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path4/Area2D"]
position = Vector2(188, 25.5)
shape = SubResource("RectangleShape2D_tn8bn")

[node name="Path5" type="ColorRect" parent="."]
offset_left = 704.0
offset_top = 247.0
offset_right = 770.0
offset_bottom = 546.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path5" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path5/Area2D"]
position = Vector2(32.5, 149)
shape = SubResource("RectangleShape2D_uyuvw")

[node name="Path6" type="ColorRect" parent="."]
offset_left = 106.0
offset_top = 247.0
offset_right = 770.0
offset_bottom = 296.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path6" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path6/Area2D"]
position = Vector2(331.5, 25)
shape = SubResource("RectangleShape2D_vjqvh")

[node name="Path7" type="ColorRect" parent="."]
offset_left = 106.0
offset_top = 56.0
offset_right = 159.0
offset_bottom = 296.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path7" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path7/Area2D"]
position = Vector2(26.5, 120)
shape = SubResource("RectangleShape2D_fipo2")

[node name="Path8" type="ColorRect" parent="."]
offset_left = 106.0
offset_top = 56.0
offset_right = 987.0
offset_bottom = 109.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path8" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path8/Area2D"]
position = Vector2(439, 27)
shape = SubResource("RectangleShape2D_jdrql")

[node name="Path9" type="ColorRect" parent="."]
offset_left = 941.0
offset_top = 56.0
offset_right = 987.0
offset_bottom = 499.0
color = Color(0.239216, 0.117647, 0.027451, 1)
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Path9" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path9/Area2D"]
position = Vector2(23, 220.5)
shape = SubResource("RectangleShape2D_0a3pp")

[node name="Path10" type="ColorRect" parent="."]
offset_left = 941.0
offset_top = 465.0
offset_right = 1192.0
offset_bottom = 499.0
color = Color(0.239216, 0.117647, 0.027451, 1)

[node name="Area2D" type="Area2D" parent="Path10" groups=["Path"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path10/Area2D"]
position = Vector2(129.5, 19)
shape = SubResource("RectangleShape2D_kamcp")

[node name="EnemyPath" type="Path2D" parent="."]
unique_name_in_owner = true
curve = SubResource("Curve2D_ak686")
script = ExtResource("5_rv4f4")
metadata/_edit_lock_ = true

[node name="Lives" type="Label" parent="."]
offset_left = 1077.0
offset_top = 4.0
offset_right = 1147.0
offset_bottom = 30.0
text = "10 Lives"

[node name="Tower1Purchase" type="Button" parent="."]
offset_left = 200.0
offset_top = 600.0
offset_right = 303.0
offset_bottom = 631.0
text = "Tower - $50"

[node name="SniperTowerPurchase" type="Button" parent="."]
offset_left = 328.0
offset_top = 600.0
offset_right = 432.0
offset_bottom = 631.0
text = "Sniper - $70"

[node name="Money" type="Label" parent="."]
offset_left = 1025.0
offset_top = 4.0
offset_right = 1065.0
offset_bottom = 30.0
text = "$150"

[node name="NextLevel" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 900.0
offset_top = 545.0
offset_right = 1110.0
offset_bottom = 622.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_outline_color = Color(0.678431, 0.678431, 0.678431, 1)
theme_override_colors/icon_hover_color = Color(0.588235, 0.784314, 0.243137, 1)
theme_override_font_sizes/font_size = 40
text = "Next Level"

[node name="Lose" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_right = 1152.0
offset_bottom = 649.0
color = Color(0.180392, 0.180392, 0.180392, 0.603922)

[node name="Label" type="Label" parent="Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -70.0
offset_right = 241.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "YOU LOSE"

[node name="RestartGame" type="Button" parent="Lose"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -207.0
offset_right = 102.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Restart Game"

[node name="Level" type="Label" parent="."]
offset_left = 24.0
offset_top = 10.0
offset_right = 97.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 20
text = "Level: 1"

[node name="MorterTowerPurchase" type="Button" parent="."]
offset_left = 456.0
offset_top = 600.0
offset_right = 568.0
offset_bottom = 631.0
text = "Morter - $100"

[node name="Win" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_right = 1152.0
offset_bottom = 649.0
color = Color(0.180392, 0.180392, 0.180392, 0.603922)

[node name="Label" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -70.0
offset_right = 241.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "YOU WIN"

[node name="RestartGame" type="Button" parent="Win"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -207.0
offset_right = 102.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Restart Game"

[connection signal="pressed" from="Tower1Purchase" to="." method="_on_tower_1_purchase_pressed"]
[connection signal="pressed" from="SniperTowerPurchase" to="." method="_on_sniper_tower_purchase_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Lose/RestartGame" to="." method="_on_restart_game_pressed"]
[connection signal="pressed" from="MorterTowerPurchase" to="." method="_on_morter_tower_purchase_pressed"]
[connection signal="pressed" from="Win/RestartGame" to="." method="_on_restart_game_pressed"]
